typescript/checker/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            125,
        ),
        hi: BytePos(
            126,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads2.ts:10:5
   |
10 | var a: A;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            140,
        ),
        hi: BytePos(
            141,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads2.ts:11:9
   |
11 | var r = a();
   |         ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            155,
        ),
        hi: BytePos(
            156,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads2.ts:12:10
   |
12 | var r2 = a(1);
   |          ^

